Small overflow fix

--- a/src/components/Complicated/Feed/Feed.scss
+++ b/src/components/Complicated/Feed/Feed.scss
@@ -8,9 +8,10 @@
     width: 66.7vw;
     h1{
         @media (max-width: 1000px) {
-            font-size: 27px;
+            font-size: 24px;
             float: left;
             margin: 0vh;
+            margin-bottom: 2vh;
         }
         font-family: Ubuntu;
         font-style: normal;
