--- a/src/components/Complicated/SideMenu/SideMenuStyle.scss
+++ b/src/components/Complicated/SideMenu/SideMenuStyle.scss
@@ -1,7 +1,6 @@
 .SideMenu{
     display: block;
     width: 22vw;
-    height: auto;
     min-height: 68vh;
     float: left;
     overflow: visible;
