--- a/src/pages/ArticleView/ArticleView.scss
+++ b/src/pages/ArticleView/ArticleView.scss
@@ -1,6 +1,6 @@
 
 .ArticleAndOperations{
-    margin: 5vh 0;
+    margin-top: 5vh;
     height: 75vh;
     overflow-y: visible;
     float: left;
