--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,7 +8,9 @@
 
 .SideMenu{
     margin: 5vh 2vw 0 5vw;
-    
+    @media (max-width: 1000px) {
+        overflow: visible;
+    }
 }
 
 body{
